# kafka_fastapi_chat

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
src/application/: main.py
src/domain/entities/: base.py  chat.py
src/domain/events/: base.py  chat.py
src/domain/exceptions/: base.py  chat.py  messages.py
src/domain/values/: base.py  chat.py  messages.py
src/tests/domain/values/: test_chat.py
